defined more urls
