# snapdragon/dashboard-restapi/api/swagger/swagger.yaml
@@ -28,6 +28,33 @@ paths:
           description: Success
           schema:
             $ref: "#/definitions/CollectionsResponse"
+    post:
+      description: Add a new collection
+      operationId: addCollection
+      parameters:
+        - name: collection
+          in: body
+          description: A new collection to add
+          schema:
+            $ref: "#/definitions/CollectionSchema"
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/AddDocumentResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    put:
+      description: Change the schema of a collection
+      operationId: changeCollection
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+      
   /collections/{name}:
     x-swagger-router-controller: collections
     get:
@@ -50,7 +77,7 @@ paths:
             $ref: "#/definitions/ErrorResponse"
     post:
       description: Insert a document into this collection.
-      operationId: putCollection
+      operationId: addDocument
       consumes:
         - application/json
       parameters:
@@ -68,9 +95,23 @@ paths:
         "200":
           description: Success
           schema:
-            $ref: "#/definitions/CollectionInsertResponse"
+            $ref: "#/definitions/AddCollectionResponse"
         default:
           description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    put:
+      description: Change a specific document in a collection
+      operationId: changeDocument
+      parameters:
+        - name: name
+          in: path
+          description: The name of the collection
+          required: true
+          type: string
+      responses:
+        "200":
+          description: Success
           schema:
             $ref: "#/definitions/ErrorResponse"
   /swagger:
@@ -95,6 +136,14 @@ definitions:
         items:
           $ref: "#/definitions/Collection"
         description: All this apps collections
+  CollectionSchema:
+    properties:
+      name:
+        type: string
+        description: The name of the collection to add
+      schema:
+        type: object
+        description: JSON object describing the schema of the new collection
   CollectionsSchemaResponse:
     required:
       - collectionSchema
@@ -106,7 +155,13 @@ definitions:
       size:
         type: number
         description: The number of documents in the collection
-  CollectionInsertResponse:
+  AddDocumentResponse:
+    required:
+      - message
+    properties:
+      message:
+        type: string
+  AddCollectionResponse:
     required:
       - message
     properties:
